# Neural_Network

./: .gitignore  README.md
Neural_Network_HSE/: .clang-format  .clang-tidy  ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  ConvertMnistDataToTxt.cpp  Functions.cpp  Functions.h  Layer.cpp  Layer.h  LinAlg.cpp  LinAlg.h  MnistReader.cpp  MnistReader.h  Network.cpp  Network.h  main.cpp
